# airflow_docker_compose

./: .env  .env.template  README.md  docker-compose.yaml  start_docker.sh
UI/backend/: .env  Dockerfile  alembic.ini  pyproject.toml
UI/backend/alembic/: env.py
UI/backend/alembic/versions/: e33d5f793ca9_add_eval_table.py
UI/backend/app/: config.py  main.py
UI/backend/app/api/: routes.py
UI/backend/app/core/: database.py
UI/backend/app/local_eval_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
UI/backend/app/models/: eval_database.py
UI/backend/scripts/: start.sh
UI/frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
UI/frontend/public/: replay.html
UI/frontend/src/: App.js
UI/frontend/src/components/: FileUploadForm.jsx  PastRunsTable.jsx  ReRunEmbedding.ts  ReplayViewer.jsx
config/: airflow.cfg
dags/: docker_image_hello_world.py  example_dag.py
initdb/: create_databases.sql
